<resources>
    <string name="app_name">MyScheduler</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="datelabel">日付：</string>
    <string name="titlelabel">タイトル：</string>
    <string name="detailabel">詳細：</string>
    <string name="save">保存</string>
    <string name="delete">削除</string>
</resources>
